// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse/1 should highlight syntax 1`] = `
<DocumentFragment>
  <div>
    <svg
      classname="code-line"
      data-line="0"
      data-marpit-svg=""
      viewBox="0 0 1280 720"
    >
      <foreignobject
        height="720"
        width="1280"
      >
        <section
          id="1"
        >
          

          <pre>
            <code
              class="language-js"
              classname="code-line"
              data-line="0"
            >
              <span
                class="hljs-keyword"
              >
                var
              </span>
               foo = 
              <span
                class="hljs-function"
              >
                <span
                  class="hljs-keyword"
                >
                  function
                </span>
                 (
                <span
                  class="hljs-params"
                >
                  bar
                </span>
                ) 
              </span>
              {
  
              <span
                class="hljs-keyword"
              >
                return
              </span>
               bar++;
};


              <span
                class="hljs-built_in"
              >
                console
              </span>
              .log(foo(
              <span
                class="hljs-number"
              >
                5
              </span>
              ));

            </code>
          </pre>
          

        </section>
        

      </foreignobject>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`parse/1 should parse markdown string into html string 1`] = `
<DocumentFragment>
  <div>
    <svg
      classname="code-line"
      data-line="0"
      data-marpit-svg=""
      viewBox="0 0 1280 720"
    >
      <foreignobject
        height="720"
        width="1280"
      >
        <section
          id="1"
        >
          

          <h1
            classname="code-line"
            data-line="0"
          >
            Slide 1
          </h1>
          

        </section>
        

      </foreignobject>
    </svg>
  </div>
  <div>
    <svg
      classname="code-line"
      data-line="1"
      data-marpit-svg=""
      viewBox="0 0 1280 720"
    >
      <foreignobject
        height="720"
        width="1280"
      >
        <section
          data-marpit-fragments="2"
          id="2"
        >
          

          <h2
            classname="code-line"
            data-line="2"
          >
            Slide 2
          </h2>
          

          <ul>
            

            <li
              classname="code-line"
              data-line="3"
              data-marpit-fragment="1"
            >
              Bullet 1
            </li>
            

            <li
              classname="code-line"
              data-line="4"
              data-marpit-fragment="2"
            >
              Bullet 2
            </li>
            

          </ul>
          

        </section>
        

      </foreignobject>
    </svg>
  </div>
</DocumentFragment>
`;
